<resources>
    <string name="app_name">Payroll</string>

    <!-- String variables for overflow bar-->

    <!-- Universal overflow options-->
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <!-- Company View overflow options -->
    <string name="action_details">Company Details</string>

    <!-- Universal Strings -->
    <!-- Buttons String -->
    <string name="universal_btn_done">Done</string>
    <string name="universal_btn_edit">Edit</string>
    <string name="universal_btn_genPayroll">Generate Payroll</string>
    <string name="universal_btn_genT4">Generate T4</string>
    <string name="universal_btn_LoE">Letter of Employment</string>
    <string name="universal_btn_cancel">Cancel</string>

    <!-- String variable for the create company activity-->
    <string name="form_title_company_activity">Create a Company</string>
    <string name="form_companyName">Company Name</string>

    <!-- String array for Province spinner -->
    <string-array name="provinces">
        <item>Select Province...</item>
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>NT</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>SK</item>
        <item>YT</item>
    </string-array>

    <!-- Array list of countries -->
    <string-array name="countries">
        <item>Select Country...</item>
        <item>Canada</item>
        <item>USA</item>
    </string-array>

    <!-- String array for Claim Code Spinner-->
    <string-array name="claimCodes">
        <item>Select Claim Code</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!-- String variables for the create employee activity -->
    <string name="title_create_employee">Create Employee</string>
    <string name="section_address_heading">Address</string>
    <string name="section_employmentInfo_heading">Employment Details</string>
    <!-- Reusable Form String variables -->

    <!-- Address form variables -->
    <string name="form_unitNumber_heading">Unit #</string>
    <string name="form_unitNumber_hint">Enter unit #...</string>
    <string name="form_streetNumber_heading">Street #*</string>
    <string name="form_streetNumber_hint">Enter street #...</string>
    <string name="form_streetName_heading">Street Name*</string>
    <string name="form_streetName_hint">Enter Street name...</string>
    <string name="form_city_heading">City*</string>
    <string name="form_city_hint">Enter City name...</string>
    <string name="form_province_heading">Province*</string>
    <string name="form_province_hint">Enter Province name...</string>
    <string name="form_postalCode_heading">Postal Code*</string>
    <string name="form_postalCode_hint">A1B 2C3</string>
    <string name="form_country_heading">Country*</string>
    <string name="form_country_hint">Enter Country Name...</string>

    <!-- Personal form variables -->
    <string name="form_employee_firstName_heading">First Name*</string>
    <string name="form_employee_firstName_hint">Enter First Name…</string>
    <string name="form_employee_middleName_heading">Middle Name</string>
    <string name="form_employee_middleName_hint">Enter Middle Name…</string>
    <string name="form_employee_lastName_heading">Last Name*</string>
    <string name="form_employee_lastName_hint">Enter Last Name…</string>
    <string name="form_employee_dateOfBirth">Date of Birth</string>

    <!-- Employment information form variables -->
    <string name="form_employment_SIN_heading">Social Insurance Number</string>
    <string name="form_employment_SIN_hint">000 000 000 </string>
    <string name="form_employment_salary_heading">Salary</string>
    <string name="form_employment_salary_hint">000 000 000 </string>
    <string name="form_employment_hourlyWage_heading">Hourly Wage</string>
    <string name="form_employment_hourlyWage_hint">21.50</string>

    <!-- Generate Payroll form -->
    <string name="form_payroll_fromDate_heading">From*</string>
    <string name="form_payroll_toDate_heading">To*</string>
    <string name="form_payroll_hoursWorked_heading">Hours Worked*</string>
    <string name="form_payroll_claimCode_heading">Claim Code</string>

    <string-array name="payPeriods">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Semi-Monthly</item>
        <item>Monthly</item>
    </string-array>
    <string name="title_activity_edit_employee">EditEmployeeActivity</string>
    <string name="title_activity_payroll_list">PayrollListActivity</string>


</resources>
