<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/FirstName_Lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_employee_firstName_heading" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:hintEnabled="false">

            <EditText
                android:id="@+id/FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_employee_firstName_hint"
                android:inputType="textPersonName"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/MiddleName_Lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_employee_middleName_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_middleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:hintEnabled="false"
                >
            <EditText
                android:id="@+id/MiddleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_employee_middleName_hint"
                android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/LastName_Lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_employee_lastName_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:hintEnabled="false">
            <EditText
                android:id="@+id/LastNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_employee_lastName_hint"
                android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/AddressInfo_Lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/section_address_heading"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/Unit_Number_Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_unitNumber_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_unitNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:hintEnabled="false">

            <EditText
                android:id="@+id/unit_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_unitNumber_hint"
                android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/Unit_streetNumber_Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_streetNumber_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_streetNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:hintEnabled="false">

            <EditText
                android:id="@+id/street_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_streetNumber_hint"
                android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/streetName_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_streetName_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_streetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">
            <EditText
                android:id="@+id/street_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_streetName_hint"
                android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/city_Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_city_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_city_hint"
                android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/province_Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_province_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">

            <EditText
                android:id="@+id/province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_province_hint"
                android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/postalCode_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_postalCode_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_postalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">
            <EditText
                android:id="@+id/postalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_postalCode_hint"
                android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/country_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_country_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">
            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_country_hint"
                android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/EmploymentInfo_Lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/section_employmentInfo_heading"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Social_Insurance_Number_Lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_employment_SIN_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_socialInsuranceNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">
            <EditText
                android:id="@+id/Social_Insurance_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/Salary_Lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_employment_salary_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">
            <EditText
                android:id="@+id/Salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_employment_salary_hint"
                android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/Hourly_Wage_Lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/form_employment_hourlyWage_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_hourlyWage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp">
            <EditText
                android:id="@+id/Hourly_Wage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/form_employment_hourlyWage_hint"
                android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/DoneBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/universal_btn_done"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>